--- a/frontend/src/app/layout/purchase/purchase.component.html
+++ b/frontend/src/app/layout/purchase/purchase.component.html
@@ -17,7 +17,8 @@
                 <mat-label>All Suppliers</mat-label>
                 <mat-select name="tier" [(ngModel)]="selectSupplierId"
                     (selectionChange)="toggleCreateAddPurchaseButton(); getPurchase()">
-                    <mat-option value="0"  (click)="clearSearch(); toggleCreateAddPurchaseButton()"  >All suppliers</mat-option>
+                    <mat-option value="0" (click)="clearSearch(); toggleCreateAddPurchaseButton()">All suppliers
+                    </mat-option>
                     <mat-option *ngFor="let supplier of suppliers" [value]="supplier.id">
                         {{supplier.company | uppercase}}
                     </mat-option>
@@ -28,7 +29,7 @@
             <mat-form-field class="field-width margin">
                 <mat-label>All Users</mat-label>
                 <mat-select [(ngModel)]="userId" (selectionChange)="getPurchase()">
-                    <mat-option value="0" (click)="clearSearch()" >All Users</mat-option>
+                    <mat-option value="0" (click)="clearSearch()">All Users</mat-option>
                     <mat-option *ngFor="let user of userData" [value]="user.id">
                         {{user.user_name}}
                     </mat-option>
@@ -128,18 +129,19 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                 <ng-container
-                    *ngIf="loggedInUsersData.user_name === element.user_name ">
-                    <!-- (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy') -->
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                        (click)="onEditNewPurchase(element)">
-                        <mat-icon aria-label="Edit">edit</mat-icon>
-                    </button>
-                    <button mat-icon-button [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
-                        [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
-                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
-                    </button>
-                   </ng-container>
+                    <ng-container *ngIf="loggedInUsersData.user_name === element.user_name ">
+                        <!-- (element.date | date: 'M/d/yy')  ===  (currentDate | date: 'M/d/yy') -->
+                        <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                            (click)="onEditNewPurchase(element)">
+                            <mat-icon aria-label="Edit">edit</mat-icon>
+                        </button>
+                        <button mat-icon-button
+                            [matTooltip]="tableParams.active? 'Click to de-active': 'Click to Active'"
+                            [color]="tableParams.active? 'warn': 'primary'" (click)="changeStatus(element.id)">
+                            <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}
+                            </mat-icon>
+                        </button>
+                    </ng-container>
                 </td>
             </ng-container>
             <ng-container matColumnDef="print">
@@ -204,10 +206,14 @@
                         <b>Total: {{total | currency: 'INR'}}</b>
                     </div>
                 </div>
-                <div style="float: right;">
-                    LB Due: {{lastDue | currency: 'INR'}}
+                <div style="display: flex; justify-content: space-between;">
+                    <div>Weight: {{weight}}</div>
+                    <div>
+                        <div>
+                            LB Due {{lastDue | currency: 'INR'}}
+                        </div>
+                    </div>
                 </div>
-                <br>
                 <div style="border-top: 2px solid black;"></div>
                 <div style="float: right; "><b> Grand Total : {{+total + +lastDue | currency: 'INR'}}</b></div><br>
                 <div style="float: right;">Payment: {{payment | currency: 'INR'}}</div><br>
@@ -228,7 +234,7 @@
                     </div>
                     <div>
                         <b style="float: right;">No #:- {{token}} </b> <br>
-                        {{date | date:  'MMM d, y, h:mm:ss a'}} &nbsp; <b>{{userName | uppercase}}</b>
+                        {{date | date: 'MMM d, y, h:mm:ss a'}} &nbsp; <b>{{userName | uppercase}}</b>
                     </div>
                 </div>
                 <div style="display: flex; font-weight: bold; border-top: 1px solid black">
@@ -262,10 +268,14 @@
                         <b>Total: {{total | currency: 'INR'}}</b>
                     </div>
                 </div>
-                <div style="float: right;">
-                    LB Due: {{lastDue | currency: 'INR'}}
+                <div style="display: flex; justify-content: space-between;">
+                    <div>Weight: {{weight}}</div>
+                    <div>
+                        <div>
+                            LB Due {{lastDue | currency: 'INR'}}
+                        </div>
+                    </div>
                 </div>
-                <br>
                 <div style="border-top: 2px solid black;"></div>
                 <div style="float: right; "><b> Grand Total : {{+total + +lastDue | currency: 'INR'}}</b></div><br>
                 <div style="float: right;">Payment: {{payment | currency: 'INR'}}</div><br>
