--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -16,9 +16,10 @@
                 <!-- category start -->
                 <mat-form-field class="margin field-width">
                     <mat-label>Select Tier</mat-label>
-                    <mat-select name="tier" [(ngModel)]="tireId" (selectionChange)="toggleCreateButton(); getSalesQuotation()">
+                    <mat-select name="tier" [(ngModel)]="tireId"
+                        (selectionChange)="toggleCreateButton(); getSalesQuotation()">
                         <mat-option value=''>All Tires</mat-option>
-                        <mat-option *ngFor="let tire of tires" [value]="tire.id" >
+                        <mat-option *ngFor="let tire of tires" [value]="tire.id">
                             {{tire.code | uppercase}}
                         </mat-option>
                     </mat-select>
@@ -114,26 +115,26 @@
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
 
                     <td mat-cell *matCellDef="let element">
-                            <ng-container *ngIf="loggedInUsersData.user_name === element.user_name">
+                        <ng-container *ngIf="loggedInUsersData.user_name === element.user_name">
                             <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                            (click)="onEditNewCustomers(element)">
-                            <mat-icon aria-label="Edit">edit</mat-icon>
-                        </button>
-                        <button mat-icon-button matTooltip="Click to Delete" color="warn"
-                        (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
-                    </button>
-                </ng-container>
-                </td>
+                                (click)="onEditNewCustomers(element)">
+                                <mat-icon aria-label="Edit">edit</mat-icon>
+                            </button>
+                            <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                                (click)="confirmDialog(element.id)">
+                                <mat-icon aria-label="Delete">delete</mat-icon>
+                            </button>
+                        </ng-container>
+                    </td>
                 </ng-container>
                 <ng-container matColumnDef="print">
                     <th mat-header-cell *matHeaderCellDef>Print</th>
                     <td mat-cell *matCellDef="let element">
                         <ng-container *ngIf="loggedInUsersData.user_name === element.user_name">
-                        <button mat-icon-button matTooltip="Move to sales " type="button"
-                            (click)="onSelectCustomers(element.id)">
-                            <mat-icon aria-label="" class="green">device_hub</mat-icon>
-                        </button>
+                            <button mat-icon-button matTooltip="Move to sales " type="button"
+                                (click)="onSelectCustomers(element.id)">
+                                <mat-icon aria-label="" class="green">device_hub</mat-icon>
+                            </button>
                         </ng-container>
                         <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
                             (click)="getPrintData(element.id)">
@@ -151,59 +152,70 @@
         </div>
     </div>
 
-<!-- print start -->
-<div style="display: none;">
-    <div id="print">
-        <div style="display: flex; justify-content: space-around;">
-            <span style="border: 1px solid black; padding: 5px; font-size: 14pxs; width: 1230px; margin: 0 0 0 5px;">
-                <div style="display: flex; justify-content: space-between;">
-                    <div>
-                        <b>{{remarks| uppercase}} </b>
+    <!-- print start -->
+    <div style="display: none;">
+        <div id="print">
+            <div style="display: flex; justify-content: space-around;">
+                <span
+                    style="border: 1px solid black; padding: 5px; font-size: 14pxs; width: 1230px; margin: 0 0 0 5px;">
+                    <div style="display: flex; justify-content: space-between;">
+                        <div>
+                            <b>{{remarks| uppercase}} </b>
+                        </div>
+                        <div>
+                            <b style="float: right;">No #:- {{sr}} </b> <br>
+                            {{date | date: 'MMM d, y, h:mm:ss a' }}
+                        </div>
                     </div>
-                    <div>
-                        <b style="float: right;">No #:- {{sr}} </b> <br>
-                        {{date | date: 'MMM d, y, h:mm:ss a' }}
+                    <div style="display: flex; font-weight: bold; border-top: 1px solid black">
+                        <div style="margin-right: 16px">No.</div>
+                        <div style="margin-right: 32px">Item </div>
+                        <div style="margin-right: 27px">Qty</div>
+                        <div style="margin-right: 31px">Price </div>
+                        <div style="margin: 0 0 0 auto;">Amount </div>
                     </div>
-                </div>
-                <div style="display: flex; font-weight: bold; border-top: 1px solid black">
-                    <div style="margin-right: 16px">No.</div>
-                    <div style="margin-right: 32px">Item </div>
-                    <div style="margin-right: 27px">Qty</div>
-                    <div style="margin-right: 31px">Price </div>
-                    <div style="margin: 0 0 0 auto;">Amount </div>
-                </div>
-                <ng-container *ngFor="let item of salesQuotationItems; let i = index">
-                    <div *ngIf="+item.row_number_by_category_id === 1 && i !== 0"
-                        style="display: flex; border-top: 1px solid black;"></div>
-                    <div a-for style="display: flex; border-top: 1px solid black;">
-                        <div style="width:30px; margin: 0 8px 0 0;   ">{{ i + 1 }}</div>
-                        <div style="  width:55px; margin: 0 8px 0 0;">{{item.item_item_code}}</div>
-                        <div style="  width:45px; margin: 0 8px 0 0;">{{item.sales_quotation_details_qty
-                            }}</div>
-                        <div style=" width:42px; margin: 0 8px 0 0;">{{item.sales_quotation_details_selling_price
-                            }}</div>
-                        <div style="margin-left:  auto">{{+item.sales_quotation_details_qty
-                            * +item.sales_quotation_details_selling_price | currency: 'INR'}}</div>
+                    <ng-container *ngFor="let item of salesQuotationItems; let i = index">
+                        <div *ngIf="+item.row_number_by_category_id === 1 && i !== 0"
+                            style="display: flex; border-top: 1px solid black;"></div>
+                        <div a-for style="display: flex; border-top: 1px solid black;">
+                            <div style="width:30px; margin: 0 8px 0 0;   ">{{ i + 1 }}</div>
+                            <div style="  width:55px; margin: 0 8px 0 0;">{{item.item_item_code}}</div>
+                            <div style="  width:45px; margin: 0 8px 0 0;">{{item.sales_quotation_details_qty
+                                }}</div>
+                            <div style=" width:42px; margin: 0 8px 0 0;">{{item.sales_quotation_details_selling_price
+                                }}</div>
+                            <div style="margin-left:  auto">{{+item.sales_quotation_details_qty
+                                * +item.sales_quotation_details_selling_price | currency: 'INR'}}</div>
+                        </div>
+                    </ng-container>
+                    <div style="border-top: 1px solid black;"></div>
+                    <div style="display: flex; justify-content: space-between;">
+                        <div><b>Total Qty: {{totalQty}}</b></div>
+                        <br>
+                        <div>
+                            <b>Total: {{total | currency: 'INR'}}</b>
+                        </div>
                     </div>
-                </ng-container>
-                <div style="border-top: 1px solid black;"></div>
-                <div style="display: flex; justify-content: space-between;">
-                    <div><b>Total Qty: {{totalQty}}</b></div>
-                    <br>
-                    <div>
-                        <b>Total: {{total | currency: 'INR'}}</b>
+                    <div style="border-top: 2px solid black;"></div>
+                    <div style="display: flex; justify-content: space-between;">
+
+                        <div>
+                            Weight: {{weight}}
+                        </div>
+                        <div>
+                            <b> Grand Total : {{total | currency: 'INR'}}</b>
+                        </div>
                     </div>
-                </div>
-                <div style="border-top: 2px solid black;"></div>
-                <div style="float: right; "><b> Grand Total : {{total | currency: 'INR'}}</b></div><br>
-                <div style="float: right;">Shipping: {{shipping | currency: 'INR'}}</div><br>
-                <div style="float: right;">GST: {{gst | currency: 'INR'}}</div><br>
-                <div style="border-top: 2px solid black;">
-                    <div style="float: right;">
-                        <b> Total Due: {{+total + (+shipping === 0 ? +0  : +shipping) + (gst === 0 ? +0 : +gst) | currency: 'INR'}}</b>
+
+                    <div style="float: right;">Shipping: {{shipping | currency: 'INR'}}</div><br>
+                    <div style="float: right;">GST: {{gst | currency: 'INR'}}</div><br>
+                    <div style="border-top: 2px solid black;">
+                        <div style="float: right;">
+                            <b> Total Due: {{+total + (+shipping === 0 ? +0 : +shipping) + (gst === 0 ? +0 : +gst) |
+                                currency: 'INR'}}</b>
+                        </div>
                     </div>
-                </div>
-            </span>
+                </span>
+            </div>
         </div>
     </div>
-</div>
