--- a/frontend/src/app/layout/sales/add-sales/add-sales.component.html
+++ b/frontend/src/app/layout/sales/add-sales/add-sales.component.html
@@ -83,6 +83,13 @@
                     <input matInput formControlName="selling_price" matTooltip="Not Editable" readonly />
                 </mat-form-field>
             </div>
+            <!-- weight start -->
+            <div class="block">
+                <mat-form-field class="input_width">
+                    <mat-label>Weight</mat-label>
+                    <input matInput formControlName="weight" matTooltip="Not Editable" readonly />
+                </mat-form-field>
+            </div>
             <!-- total start -->
             <div class="block">
                 <mat-form-field class="input_width">
@@ -184,12 +191,22 @@
         <div class="flex remakesAndPayment">
             <div class="remakes">
                 <mat-form-field>
-                    <textarea matInput class="padding" id="" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
+                    <textarea matInput class="padding" cdkAutosizeMinRows="8" cdkAutosizeMaxRows="8"
                         placeholder="Enter Remarks..." formControlName="remarks"></textarea>
                 </mat-form-field>
                 <ng-container *ngIf="isShowRemarksError">
                     <span class="error"><br>Please enter remarks</span>
                 </ng-container>
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                <span>
+                    <mat-form-field>
+                        <mat-label>Weight</mat-label>
+                        <input matInput disable matTooltip="Not Editable" readonly [value]="weight" />
+                    </mat-form-field>
+                </span>
             </div>
             <div class="payment">
                 <div class="float">
