--- a/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
+++ b/frontend/src/app/layout/purchase/add-purchase/add-purchase.component.html
@@ -105,7 +105,7 @@
         </ng-container>
         <ng-container matColumnDef="qty">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
-
+                Qty.
             </th>
             <td mat-cell *matCellDef="let sales">
                 {{ sales.qty }}
