--- a/frontend/src/app/layout/analysis/analysis.component.html
+++ b/frontend/src/app/layout/analysis/analysis.component.html
@@ -215,14 +215,6 @@
             Download
         </button>
     </div>
-    <div>
-        <button color="primary" class=" btn" mat-raised-button>
-            Line
-        </button>
-        <button color="primary" class="btn" mat-raised-button>
-            Bar
-        </button>
-    </div>
 </div>
 <!-- chart content -->
 <div>
@@ -235,26 +227,8 @@
             <span>Avg Profit: {{15522}} </span>
         </div>
 
-        <div >
-        <!-- <div style=""> -->
-          <ngx-charts-bar-vertical-2d
-            [view]="view"
-              [scheme]="colorScheme"
-               [results]="multi"
-               [gradient]="gradient"
-                [xAxis]="showXAxis"
-                [yAxisLabel]="yAxisLabel"
-                 [yAxis]="showYAxis"
-                  [legend]="showLegend"
-                  [legendTitle]="legendTitle"
-                  [legendPosition]="legendPosition"
-                  [showGridLines]="showGridLines"
-                  [roundDomains]="roundDomains"
-                [showYAxisLabel]="showYAxisLabel"
-                  >
-                </ngx-charts-bar-vertical-2d>
-                <!-- [strokeColor]="strokeColor"
-[strokeWidth]="strokeWidth" -->
+        <div>
+            <div id="container"></div>
         </div>
     </div>
 
@@ -335,14 +309,7 @@
             Download
         </button>
     </div>
-    <div>
-        <button color="primary" class=" btn" mat-raised-button>
-            Line
-        </button>
-        <button color="primary" class="btn" mat-raised-button>
-            Bar
-        </button>
-    </div>
+
 </div>
 <!-- chart content -->
 <div>
@@ -356,22 +323,7 @@
         </div>
     </div>
     <div>
-        <ngx-charts-bar-vertical-2d
-        [view]="view"
-          [scheme]="colorScheme"
-           [results]="multi"
-           [gradient]="gradient"
-            [xAxis]="showXAxis"
-            [yAxisLabel]="yAxisLabel"
-             [yAxis]="showYAxis"
-              [legend]="showLegend"
-              [legendTitle]="legendTitle"
-              [legendPosition]="legendPosition"
-              [showGridLines]="showGridLines"
-              [roundDomains]="roundDomains"
-            [showYAxisLabel]="showYAxisLabel"
-              >
-            </ngx-charts-bar-vertical-2d>
+        <div id="container"></div>
     </div>
 </div>
 <!-- Purchase   chart container start -->
@@ -435,14 +387,7 @@
             Download
         </button>
     </div>
-    <div>
-        <button color="primary" class=" btn" mat-raised-button>
-            Line
-        </button>
-        <button color="primary" class="btn" mat-raised-button>
-            Bar
-        </button>
-    </div>
+
 </div>
 <!-- chart content -->
 <div>
@@ -456,29 +401,6 @@
         </div>
     </div>
     <div>
-        <ngx-charts-bar-vertical-2d
-        [view]="view"
-          [scheme]="colorScheme"
-           [results]="multi"
-           [gradient]="gradient"
-            [xAxis]="showXAxis"
-            [yAxisLabel]="yAxisLabel"
-             [yAxis]="showYAxis"
-              [legend]="showLegend"
-              [legendTitle]="legendTitle"
-              [legendPosition]="legendPosition"
-              [showGridLines]="showGridLines"
-              [roundDomains]="roundDomains"
-            [showYAxisLabel]="showYAxisLabel"
-              >
-            </ngx-charts-bar-vertical-2d>
+        <!-- <div id="container"></div> -->
     </div>
 </div>
-<br><br>
-<div id="action-description">
-    <p>
-        This Angular column chart example visualizes the medal count from the Rio Olympics with the default column
-        series in the chart.
-    </p>
-</div>
-
